PREPARAZIONE DEMO PER GUI 14/09/2016

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -103,6 +103,7 @@ label.atto_delega=Atto di delega
 label.avanti=avanti
 label.azioni=Azioni
 label.benvenuto=Benvenuto
+label.blocca_seduta=Blocca Seduta
 label.budgetPrevisionale=Budget previsionale per l’anno in corso
 label.cambia_password=Cambia password
 label.cambio_password=Cambio password
@@ -190,6 +191,7 @@ label.error=Errore
 label.error_page_title=Ops! Si è verificato un errore
 label.errore_login=Username e/o password errati
 label.esempio_modello=Modello di esempio
+label.esito_valutazione=Esito Valutazione
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
@@ -422,13 +424,12 @@ label.sezione=Sezione
 label.sistemaInformatico=Sistema informatico dedicato alla formazione in ambito sanitario
 label.sito_internet=Sito internet
 label.sostituisci=Sostituisci
-label.sposta=Sposta
 label.sostituisci_anagrafica=Sostituzione Intera Anagrafica
+label.sposta=Sposta
 label.stato=Stato
 label.stato_account=Stato Account
 label.stato_destinazione=Stato di Destinazione della Domanda di Accreditamento
 label.stato_domanda=Stato Domanda
-label.esito_valutazione=Esito Valutazione
 label.stato_inserimento=Stato Inserimento
 label.stato_valutazione=Stato Valutazione
 label.status=Status
@@ -510,8 +511,10 @@ message.presa_in_carico=La Domanda di Accreditamento è stata correttamente pres
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
+message.evento_salvato=I dati dell''evento sono stati salvati successo.
 message.seduta_eliminata=Seduta eliminata.
 message.seduta_salvata=La Seduta è stata salvata con successo.
+message.seduta_valutata=Seduta conclusa correttamente con la valutazione di tutte le Domande inserite nell'Ordine del Giorno.
 message.utente_creato=Il nuovo utente è stato correttamente registrato ed è stata inviata una e-mail con le credenziali di accesso.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.valutazione_commissione_salvata=Valutazione della Commissione e Stato della Domanda di Accreditamento salvati
@@ -531,5 +534,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.blocca_seduta=Blocca Seduta
-message.seduta_valutata=Seduta conclusa correttamente con la valutazione di tutte le Domande inserite nell'Ordine del Giorno.
