label + parte di modifica sede

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -51,7 +51,9 @@ error.password.incorrect=password non esatta
 error.password_repeat=la password non coincide
 error.professioni_non_conformi_con_accreditamento=Le professioni dei Componenti del Comitato Scientifico non sono conformi con le professioni dell''Accreditamento
 error.repeat=non corrisponde
+error.sede_legale_gia_inserita=La Sede Legale deve essere unica ed è già stata inserita per questo Provider
 error.select=selezionare almeno un valore
+error.selezionare_tipologia_sede=Selezionare almeno una tipologia di Sede
 error.stessoCf=il delegato del legale rappresentante non può avere lo stesso codice fiscale del legale rappresentante
 error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
@@ -64,7 +66,7 @@ label.abilitato=Abilitato
 label.accedi=Accedi
 label.accreditamenti=Accreditamenti
 label.accreditamenti_lista=Domande di accreditamento presentate
-label.accreditamenti_lista_gruppo=Lista Domande di accreditamento da {0}
+label.accreditamenti_lista_gruppo=Lista Domande di accreditamento {0}
 label.accreditamento=Accreditamento
 label.accreditamento_invio=Data invio
 label.accreditamento_mesi_validita=Validità (mesi)
@@ -79,6 +81,7 @@ label.aggiorna_account=Aggiorna Account
 label.aggiungi_componente=Aggiungi componente del comitato
 label.aggiungi_domanda_in_odg=Aggiungi Domanda in Ordine del giorno
 label.aggiungi_evento=Aggiungi evento
+label.aggiungi_sede=Aggiungi sede
 label.allegati=Allegati
 label.allegato=Allegato
 label.allegato_non_inserito=Allegato non inserito
@@ -86,6 +89,7 @@ label.altro_personale=Altro personale
 label.anagrafica_salvata=L'anagrafica è stata salvata con successo
 label.anagrafiche=Anagrafiche
 label.anagrafiche_provider=Anagrafiche del provider
+label.anche_operativa= e Operativa
 label.anno=Anno {0}
 label.annulla=Annulla
 label.applica=Applica
@@ -100,6 +104,7 @@ label.atto_delega=Atto di delega
 label.avanti=avanti
 label.azioni=Azioni
 label.benvenuto=Benvenuto
+label.blocca_seduta=Blocca Seduta
 label.budgetPrevisionale=Budget previsionale per l’anno in corso
 label.cambia_password=Cambia password
 label.cambio_password=Cambio password
@@ -142,7 +147,10 @@ label.da_inserire=(non inserito)
 label.da_integrare=Da integrare
 label.da_leggere=Da leggere
 label.da_pagare=Da pagare
+label.da_prendere_in_carica=Da prendere in carica
+label.da_riassegnare=Da riassegnare ai Referee CRECM
 label.da_valutare=Da valutare
+label.da_valutare_integrazione=Di cui valutare l'integrazione
 label.dashboard_admin=Admin dashboard
 label.dashboard_provider=Provider dashboard
 label.dashboard_referee=Referee dashboard
@@ -178,8 +186,13 @@ label.disciplina=Disciplina
 label.discipline_riepilogo=Riepilogo delle discipline selezionate
 label.domanda_accreditamento=Domanda di Accreditamento
 label.domanda_id=ID Domanda
+label.domanda_provvisoria=Domanda Provvisoria
+label.domanda_standard=Domanda Standard
+label.domande_accreditamento=Domande di Accreditamento
 label.domande_accreditamento=Domande di Accreditamento
 label.domande_accreditamento_in_odg=Domande di accreditamento nell'Ordine del giorno della Seduta
+label.domande_provvisorie=Domande Provvisorie
+label.domande_standard=Domande Standard
 label.elimina=Elimina
 label.email=E-mail
 label.enabled=Abilitato
@@ -187,6 +200,7 @@ label.error=Errore
 label.error_page_title=Ops! Si è verificato un errore
 label.errore_login=Username e/o password errati
 label.esempio_modello=Modello di esempio
+label.esito_valutazione=Esito Valutazione
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
@@ -221,9 +235,13 @@ label.home=Torna alla Home
 label.home_page=Benvenuto in ECM - Regione Veneto
 label.id=Id
 label.in_attesa_attivazione=In attesa di attivazione
+label.in_preavviso_di_rigetto=In Preavviso di Rigetto
+label.in_richiesta_integrazione=In Richiesta di Integrazione
+label.in_scadenza=In scadenza nei prossimi 10 giorni
 label.incarico_presso_la_struttura=Incarico presso la struttura
 label.indietro=Indietro
 label.indirizzo=Indirizzo
+label.indirizzo_sede={0} ({1})
 label.info_account=Accedi all'area riservata
 label.info_applicazione_integrazione=Le modifche saranno applicate solo dopo approvazione da parte della Segreteria ECM
 label.info_delega=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
@@ -232,9 +250,11 @@ label.info_provider=Informazioni del Provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
 label.inserimento_nuovo_piano_formativo=Inserimento del piano formativo
 label.inserimento_piano_formativo=Piano formativo relativo all''anno {0}
+label.inserimento_sede=Inserimento Sede
 label.inserimento_seduta=Inserimento nuova Seduta
 label.inserimento_valutazione=Inserimento della Valutazione della Domanda
 label.inserimento_valutazione_commissione_in_ODG=Inserisci una Domanda di Accreditamento da valutare nell'Ordine del Giorno
+label.inserire_almeno_sede_legale=Inserire almeno la Sede Legale
 label.inserisci=Inserisci
 label.inserisci_nuova_anagrafica=Inserisci nuova anagrafica
 label.inserisci_nuova_seduta=Nuova Seduta
@@ -248,6 +268,8 @@ label.inserito_piano_formativo=Evento del Piano Formativo relativo all''anno {0}
 label.invia=Invia
 label.invia_domanda=Invia Domanda
 label.is_coordinatore=Inserisci come Coordinatore del Comitato Scientifico
+label.is_sede_legale=Inserisci come Sede Legale
+label.is_sede_operativa=Inserisci anche come Sede Operativa
 label.istruzioni_psw=La password deve essere composta da minimo 8 e massimo 12 caratteri, deve inoltre contenere almeno un numero e una lettera
 label.italiana=Italiana
 label.iter_accreditamento=Iter Accreditamento
@@ -273,6 +295,8 @@ label.modifica=Modifica
 label.modifica_dati_anagrafici=Modifica dati anagrafici di {0} {1}
 label.modifica_evento=Modifica evento
 label.modifica_profilo=Modifica Profilo
+label.modifica_sede_legale=Modifica Sede Legale
+label.modifica_sede_operativa=Modifica Sede Operativa
 label.modifica_seduta=Modifica della Seduta del {0}
 label.modifica_utente=Modifica Utente
 label.mostra=Mostra
@@ -295,6 +319,7 @@ label.nessuna_disciplina=Nessuna disciplina selezionata
 label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
 label.nessuna_domanda_selezionabile=Nessuna Domanda selezionabile
 label.nessuna_persona=Nessuna persona disponibile
+label.nessuna_sede=Nessuna sede inserita
 label.nessuna_seduta=Non sono state trovate Sedute nel database!
 label.nessuna_seduta_selezionabile=Nessuna Seduta selezionabile
 label.nessuna_valutazione_commissione=Nessuna domanda inserita
@@ -303,6 +328,8 @@ label.no_profit=Società no-profit
 label.nome=Nome
 label.nome_utente=Nome Utente
 label.non_abilitato=Non abilitato
+label.non_effettuata_consecutivamente=Non effettuata (consecutivamente)
+label.non_effettuate_consecutivamente=Non effettuate (consecutivamente)
 label.non_ha_valutato=Non ha valutato le domande di accreditamento assegnategli
 label.non_hanno_valutato=Non hanno valutato le domande di accreditamento assegnate loro
 label.non_inserito=non inserito
@@ -341,6 +368,7 @@ label.piano_formativo=Piano Formativo
 label.piano_formativo_modificabile_fino_a=Piano formativo modificabile entro il {0}
 label.piva=PIVA
 label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
+label.preavvisoRigetto=in preavviso di rigetto
 label.prendi_in_carica=Prendi in Carica
 label.presa_visione=Presa visione
 label.prezzo=Prezzo
@@ -377,10 +405,12 @@ label.responsabile_segreteria=Responsabile di Segreteria
 label.responsabile_sistema_informatico=Responsabile Sistema Informatico
 label.responsabili=Responsabili
 label.riassegna_domanda_accreditamento=Riassegna la domanda di accreditamento
-label.richiesta_accreditamento=Richiesta Accreditamento
+label.richiestaIntegrazione=in richiesta di integrazione
 label.richiesta_accreditamento=Richiesta di accreditamento
 label.richiesta_integrazione=Richiesta di Integrazione
+label.richiesta_standard_accreditamento=Richiesta di accreditamento Standard
 label.richieste_accreditamento=Richieste di accreditamento
+label.richieste_standard_accreditamento=Richieste di accreditamento Standard
 label.ricordami=Ricordami
 label.riepilogo_accreditamento=Domanda di Accreditamento {0} ({1})
 label.riepilogo_valutazione_accreditamento=Valutazione dell''Accreditamento {0} ({1})
@@ -398,6 +428,7 @@ label.sede_legale=Sede Legale
 label.sede_operativa=Sede Operativa
 label.sede_operativa_coincide=Sede Operativa (coincide con Sede Legale)
 label.sedi=Sedi
+label.sedi_provider=Sedi del Provider
 label.seduta=Seduta Ordine del Giorno
 label.seduta_target=Seduta nella quale spostare la Domanda di Accreditamento
 label.sedute_inserite=Sedute inserite
@@ -421,7 +452,6 @@ label.stato=Stato
 label.stato_account=Stato Account
 label.stato_destinazione=Stato di Destinazione della Domanda di Accreditamento
 label.stato_domanda=Stato Domanda
-label.esito_valutazione=Esito Valutazione
 label.stato_inserimento=Stato Inserimento
 label.stato_valutazione=Stato Valutazione
 label.status=Status
@@ -434,6 +464,7 @@ label.tipo_organizzatore=Tipo Organizzatore
 label.tipo_provider=Tipo:
 label.tipologiaAccreditamento=Accreditamento per tipologia
 label.tipologia_evento=Tipologia dell'evento
+label.tipologia_sede=Tipologia Sede
 label.titolo=Titolo
 label.titolo_programma_formativo=Titolo del programma formativo
 label.torna_in_visualizzazione=Torna in visualizzazione
@@ -449,13 +480,14 @@ label.validazione=Validazione
 label.valido=valido
 label.valuta=Valuta
 label.valuta_domanda=Valuta Domanda
-label.valutare=valutare
+label.valutare=da valutare
 label.valutato=valutato
 label.valutatore=Valutatore
 label.valutazione=Valutazione
 label.valutazione_commissione=Valutazione Commissione
 label.valutazione_commissione_ECM=Valutazione Commissione ECM
 label.valutazione_domande_seduta=Valutazione delle Domande della Seduta del {0}
+label.valutazioni=Valutazioni
 label.valutazioni_complessive=Valutazioni Complessive
 label.valutazioni_effettuate=Tabella delle Valutazioni {0}
 label.valutazioni_non_date=Valutazione non date (consecutivamente)
@@ -502,9 +534,11 @@ message.piano_formativo_anno_gia_inserito=Piano formativo per l''anno {0} già i
 message.presa_in_carico=La Domanda di Accreditamento è stata correttamente presa in carico.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
+message.sede_eliminata=Sede eliminata.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.seduta_eliminata=Seduta eliminata.
 message.seduta_salvata=La Seduta è stata salvata con successo.
+message.seduta_valutata=Seduta conclusa correttamente con la valutazione di tutte le Domande inserite nell'Ordine del Giorno.
 message.utente_creato=Il nuovo utente è stato correttamente registrato ed è stata inviata una e-mail con le credenziali di accesso.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.valutazione_commissione_salvata=Valutazione della Commissione e Stato della Domanda di Accreditamento salvati
@@ -524,5 +558,19 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.blocca_seduta=Blocca Seduta
-message.seduta_valutata=Seduta conclusa correttamente con la valutazione di tutte le Domande inserite nell'Ordine del Giorno.
+label.listaDomandeDaPrendereInCaricaProvvisorio=Lista delle Domande di Accreditamento Provvisorie da prendere in carica
+label.listaDomandeDaPrendereInCaricaStandard=Lista delle Domande di Accreditamento Standard da prendere in carica
+label.listaDomandeDaPrendereInCarica=Lista delle Domande di Accreditamento da prendere in carica
+label.listaDomandeDaValutareProvvisorio=Lista delle Domande di Accreditamento Provvisorie da valutare
+label.listaDomandeDaValutareStandard=Lista delle Domande di Accreditamento Standard da valutare
+label.listaDomandeDaValutare=Lista delle Domande di Accreditamento da valutare
+label.listaDomandeRichiestaIntegrazioneProvvisorio=Lista delle Domande di Accreditamento Provvisorie in richiesta di integrazione
+label.listaDomandeRichiestaIntegrazioneStandard=Lista delle Domande di Accreditamento Standard in richiesta di integrazione
+label.listaDomandeRichiestaIntegrazione=Lista delle Domande di Accreditamento in richiesta di integrazione
+label.listaDomandePreavvisoRigettoProvvisorio=Lista delle Domande di Accreditamento Provvisorie in preavviso di rigetto
+label.listaDomandePreavvisoRigettoStandard=Lista delle Domande di Accreditamento Standard in preavviso di rigetto
+label.listaDomandePreavvisoRigetto=Lista delle Domande di Accreditamento in preavviso di rigetto
+label.listaDomandeDaRiassegnareProvvisorio=Lista delle Domande di Accreditamento Provvisorie da riassegnare
+label.listaDomandeDaRiassegnareStandard=Lista delle Domande di Accreditamento Standard da riassegnare
+label.listaDomandeDaRiassegnare=Lista delle Domande di Accreditamento da riassegnare
+label.listaDomandeInScadenza=Lista delle Domande di Accreditamento in scadenza (nei prossimi 10 giorni)
