vaschetta e query commissione ECM + cambio db in properties

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -582,3 +582,5 @@ label.listaDomandeDaRiassegnareProvvisorio=Lista delle Domande di Accreditamento
 label.listaDomandeDaRiassegnareStandard=Lista delle Domande di Accreditamento Standard da riassegnare
 label.listaDomandeDaRiassegnare=Lista delle Domande di Accreditamento da riassegnare
 label.listaDomandeInScadenza=Lista delle Domande di Accreditamento in scadenza (nei prossimi 10 giorni)
+label.inserite_nella_prossima_seduta=Nella prossima Seduta del {0} alle {1}
+label.commissione=Commissione ECM
