--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -85,18 +85,23 @@ label.aggiungi_componente=Aggiungi componente del comitato
 label.aggiungi_domanda_in_odg=Aggiungi Domanda in Ordine del giorno
 label.aggiungi_evento=Aggiungi evento
 label.aggiungi_sede=Aggiungi sede
+label.allega=Allega
 label.allegati=Allegati
 label.allegato=Allegato
 label.allegato_non_inserito=Allegato non inserito
 label.altro_personale=Altro personale
+label.ambito=Ambito:
+label.ambito_list=Ambito
 label.anagrafica_salvata=L'anagrafica è stata salvata con successo
 label.anagrafiche=Anagrafiche
 label.anagrafiche_provider=Anagrafiche del provider
 label.anche_operativa= e Operativa
 label.anno=Anno {0}
 label.annulla=Annulla
+label.aperta=Aperta
 label.applica=Applica
 label.apri_tutte=Apri tutte
+label.archivia=Archivia
 label.assegna=Assegna
 label.assegna_nuovo_gruppo=Assegna Nuovo Gruppo
 label.assegna_stesso_gruppo=Fai valutare Integrazione
@@ -108,6 +113,8 @@ label.avanti=avanti
 label.azioni=Azioni
 label.benvenuto=Benvenuto
 label.blocca_seduta=Blocca Seduta
+label.bloccata=Bloccata
+label.bloccate=Bloccate
 label.budgetPrevisionale=Budget previsionale per l’anno in corso
 label.cambia_password=Cambia password
 label.cambio_password=Cambio password
@@ -123,20 +130,30 @@ label.cf=CF
 label.cf_straniero=Ha un codice fiscale non italiano
 label.chiudi=Chiudi
 label.chiudi_tutte=Chiudi tutte
+label.chiusa=Chiusa
+label.chiuse=Chiuse
+label.chiuse_comunicazione_messaggio={0} Comunicazioni chiuse
 label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA
 label.codiceFiscaleOrIVAProvider=Codice Fiscale / Partita IVA Provider
 label.codice_fiscale=Codice Fiscale
 label.cognome=Cognome
 label.coincide_con_sede_legale=Coincide con Sede Legale
 label.comitato_scientifico=Comitato Scientifico
+label.commissione=Commissione ECM
 label.componente_comitato=Componente
 label.componenti_comitato_scientifico=Componenti del Comitato Scientifico
+label.componi=Componi
+label.composizione_comunicazione=Nuova Comunicazione
 label.comune=Comune
+label.comunicazione=Comunicazione
 label.comunicazioni=Comunicazioni
+label.comunicazioni_dashboard=Dashboard delle Comunicazioni
+label.comunicazioni_inviate=Comunicazioni Inviate
 label.conferma=Conferma
 label.conferma_inserimento_piano=Inserendo il Piano Formativo non sarà più possibile modificare i dati della domanda.
 label.conferma_password=Conferma Password
 label.conferma_valutazione=Conferma Valutazione
+label.contrassegna_come_letta=Contrassegna come letta
 label.contributo_annuale=Contributo Annuale
 label.coordinatore_comitato=Coordinatore
 label.coordinatore_comitato_scientifico=Coordinatore Comitato Scientifico
@@ -154,11 +171,14 @@ label.da_prendere_in_carica=Da prendere in carica
 label.da_riassegnare=Da riassegnare ai Referee CRECM
 label.da_valutare=Da valutare
 label.da_valutare_integrazione=Di cui valutare l'integrazione
+label.dashboard=Dashboard
 label.dashboard_admin=Admin dashboard
 label.dashboard_provider=Provider dashboard
 label.dashboard_referee=Referee dashboard
 label.dashboard_segreteria=Segreteria dashboard
 label.data=Data
+label.data_creazione=Data Creazione
+label.data_ultima_modifica=Data Ultima Modifica
 label.dati_accreditamento=Dati Accreditamento
 label.dati_attività=Dati dell'attività
 label.dati_dei_responsabili=Dati dei Responsabili
@@ -221,6 +241,11 @@ label.fileDaFirmare=File da firmare
 label.file_descrizione=Descrizione
 label.file_nome=File
 label.firma_digitalmente=Firma digitalmente
+label.from=Da:
+label.from_provider=Da: {0} ({1})
+label.from_provider_list={0} ({1})
+label.from_segreteria=Da: Segreteria ECM
+label.from_segreteria_list=Segreteria ECM
 label.funzionigramma=Funzionigramma
 label.generale=Generale
 label.gestione_domande=Ordine del Giorno
@@ -264,6 +289,7 @@ label.inserisci_nuova_seduta=Nuova Seduta
 label.inserisci_piano_formativo=Inserisci Piano Formativo
 label.inserisci_valutazione=Inserisci Valutazione
 label.inserisci_valutazione_complessiva=Valutazione complessiva dell'Accreditamento
+label.inserite_nella_prossima_seduta=Nella prossima Seduta del {0} alle {1}
 label.inserito=inserito
 label.inserito_come_coordinatore=È il coordinatore del comitato scientifico?
 label.inserito_da=Denominazione legale Provider
@@ -271,6 +297,10 @@ label.inserito_piano_formativo=Evento del Piano Formativo relativo all''anno {0}
 label.invia=Invia
 label.invia_domanda=Invia Domanda
 label.invia_richiesta_integrazione=Invia Richiesta Integrazione
+label.inviata=Inviata
+label.inviata_da=Inviata da: {0}
+label.inviate=Inviate
+label.inviate_comunicazione_messaggio={0} Comunicazioni inviate
 label.is_coordinatore=Inserisci come Coordinatore del Comitato Scientifico
 label.is_sede_legale=Inserisci come Sede Legale
 label.is_sede_operativa=Inserisci anche come Sede Operativa
@@ -280,8 +310,25 @@ label.iter_accreditamento=Iter Accreditamento
 label.legale_radio=Il richiedente è il Legale Rappresentante
 label.legale_rappresentante=Legale Rappresentante
 label.list_eventi=Lista degli eventi del provider {0}
+label.listaDomandeDaPrendereInCarica=Lista delle Domande di Accreditamento da prendere in carica
+label.listaDomandeDaPrendereInCaricaProvvisorio=Lista delle Domande di Accreditamento Provvisorie da prendere in carica
+label.listaDomandeDaPrendereInCaricaStandard=Lista delle Domande di Accreditamento Standard da prendere in carica
+label.listaDomandeDaRiassegnare=Lista delle Domande di Accreditamento da riassegnare
+label.listaDomandeDaRiassegnareProvvisorio=Lista delle Domande di Accreditamento Provvisorie da riassegnare
+label.listaDomandeDaRiassegnareStandard=Lista delle Domande di Accreditamento Standard da riassegnare
+label.listaDomandeDaValutare=Lista delle Domande di Accreditamento da valutare
+label.listaDomandeDaValutareProvvisorio=Lista delle Domande di Accreditamento Provvisorie da valutare
+label.listaDomandeDaValutareStandard=Lista delle Domande di Accreditamento Standard da valutare
+label.listaDomandeInScadenza=Lista delle Domande di Accreditamento in scadenza (nei prossimi 10 giorni)
+label.listaDomandePreavvisoRigetto=Lista delle Domande di Accreditamento in preavviso di rigetto
+label.listaDomandePreavvisoRigettoProvvisorio=Lista delle Domande di Accreditamento Provvisorie in preavviso di rigetto
+label.listaDomandePreavvisoRigettoStandard=Lista delle Domande di Accreditamento Standard in preavviso di rigetto
+label.listaDomandeRichiestaIntegrazione=Lista delle Domande di Accreditamento in richiesta di integrazione
+label.listaDomandeRichiestaIntegrazioneProvvisorio=Lista delle Domande di Accreditamento Provvisorie in richiesta di integrazione
+label.listaDomandeRichiestaIntegrazioneStandard=Lista delle Domande di Accreditamento Standard in richiesta di integrazione
 label.lista_allegati=Lista degli allegati del provider {0}
 label.lista_anni_selezionabili=Lista degli anni selezionabili
+label.lista_comunicazioni_tipo=Lista delle Comunicazioni {0}
 label.lista_domande_da_valutare=Domande da valutare
 label.lista_persone=Lista delle persone del provider {0}
 label.lista_piani_formativi=Lista dei piani formativi inseriti
@@ -294,6 +341,7 @@ label.mese=mese
 label.messaggi=Messaggi
 label.messaggio=Messaggio
 label.messaggio_warning_no_piani_formativi=E' possibile inserire il Piano Formativo in linea con le tempistiche definite da l'ente ECM
+label.mittente=Mittente
 label.modelli_allegato=Modelli di allegato
 label.modifica=Modifica
 label.modifica_comitato=Inserimento/rimozione di componenti
@@ -319,12 +367,16 @@ label.nessun_componente_comitato=Nessun componente del comitato scientifico inse
 label.nessun_evento_list=Nessun evento disponibile
 label.nessun_evento_piano_formativo=Nessun evento inserito nel piano formativo
 label.nessun_file_selezionato=Nessun file selezionato
+label.nessun_messaggio_non_letto=Nessun messaggio ancora da leggere
 label.nessun_piano_formativo=Non ci sono piani formativi!
 label.nessun_provider=Non ci sono provider registrati!
+label.nessuna_comunicazione_ricevuta_ancora=Non è stata ancora ricevuta nessuna Comunicazione
+label.nessuna_comunicazione_tipologia=Nessuna Comunicazione {0}!
 label.nessuna_disciplina=Nessuna disciplina selezionata
 label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
 label.nessuna_domanda_selezionabile=Nessuna Domanda selezionabile
 label.nessuna_persona=Nessuna persona disponibile
+label.nessuna_risposta=Nessuna risposta
 label.nessuna_sede=Nessuna sede inserita
 label.nessuna_seduta=Non sono state trovate Sedute nel database!
 label.nessuna_seduta_selezionabile=Nessuna Seduta selezionabile
@@ -345,16 +397,22 @@ label.not_enabled=Disabilitato
 label.note=Note
 label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
+label.nuova=Nuova
+label.nuova_comunicazione=Nuova Comunicazione
+label.nuova_comunicazione=Nuova Comunicazione
 label.nuova_domanda_provvisoria=Nuova domanda Provvisoria
 label.nuova_domanda_standard=Nuova domanda Standard
 label.nuova_password=Nuova Password
+label.nuova_risposta=Nuova Risposta
 label.nuovo=Nuovo
 label.nuovo_piano_formativo=Nuovo piano formativo
 label.nuovo_provider=Nuovo provider
 label.nuovo_utente=Nuovo Utente
 label.obiettivo_formativo_nazionale=Obiettivo formativo Nazionale
 label.obiettivo_formativo_regionale=Obiettivo formativo Regionale
+label.oggetto=Oggetto:
 label.oggetto_discussione=Motivazione
+label.oggetto_list=Oggetto
 label.oggi=oggi
 label.ok=ok
 label.opzione_selezione_domanda=Domanda {0}, Provider: {1} ({2})
@@ -411,6 +469,9 @@ label.responsabile_segreteria=Responsabile di Segreteria
 label.responsabile_sistema_informatico=Responsabile Sistema Informatico
 label.responsabili=Responsabili
 label.riassegna_domanda_accreditamento=Riassegna la domanda di accreditamento
+label.ricevuta=Ricevuta
+label.ricevute=Ricevute
+label.ricevute_comunicazione_messaggio={0} Comunicazioni ricevute
 label.richiestaIntegrazione=in richiesta di integrazione
 label.richiesta_accreditamento=Richiesta di accreditamento
 label.richiesta_integrazione=Richiesta di Integrazione
@@ -423,6 +484,9 @@ label.riepilogo_valutazione_accreditamento=Valutazione dell''Accreditamento {0} 
 label.riepilogo_valutazioni_complessive=Riepilogo delle Valutazioni Complessive
 label.rimuovi=Rimuovi
 label.rimuovi_evento=Rimuovi evento
+label.rispondi=Rispondi
+label.risposta=Risposta
+label.risposta_a_comunicazione=Nuova Risposta alla Comunicazione
 label.risposta_del_provider=Risposta del Provider
 label.ruolo=Ruolo
 label.salva=Salva
@@ -439,6 +503,8 @@ label.seduta=Seduta Ordine del Giorno
 label.seduta_target=Seduta nella quale spostare la Domanda di Accreditamento
 label.sedute_inserite=Sedute inserite
 label.segreteria=Segreteria
+label.segreteria_ecm=Segreteria ECM
+label.segreteria_ecm_mail=segreteria@ecm.it
 label.sei_un_nuovo_provider=Sei un nuovo provider?
 label.seleziona=Seleziona...
 label.seleziona_altro_ODG=Seleziona l'Ordine Del Giorno nel quale spostare la domanda di Accreditamento selezionata
@@ -469,15 +535,23 @@ label.telefono=Telefono
 label.tempo_indeterminato=Tempo indeterminato
 label.tipo_organizzatore=Tipo Organizzatore
 label.tipo_provider=Tipo:
+label.tipologia=Tipologia:
 label.tipologiaAccreditamento=Accreditamento per tipologia
 label.tipologia_evento=Tipologia dell'evento
+label.tipologia_list=Tipologia
 label.tipologia_sede=Tipologia Sede
 label.titolo=Titolo
 label.titolo_programma_formativo=Titolo del programma formativo
+label.to=A:
+label.to_provider={0} ({1})
+label.to_provider_multipli=A: destinatari multipli
+label.to_segreteria=A: Segreteria ECM
 label.torna_in_visualizzazione=Torna in visualizzazione
 label.trova=Trova
 label.tutte="Tutte"
 label.tutte_le_valutazioni=Mostra tutte le Valutazioni
+label.ultima_comunicazione_ricevuta=Ultima Comunicazione ricevuta: {0}
+label.ultimi_messaggi_ricevuti=Ultimi messaggi ricevuti ({0} di {1})
 label.username=Username
 label.utente=Utente
 label.utenti=Utenti
@@ -499,7 +573,10 @@ label.valutazioni_complessive=Valutazioni Complessive
 label.valutazioni_effettuate=Tabella delle Valutazioni {0}
 label.valutazioni_non_date=Valutazione non date (consecutivamente)
 label.valutazioni_precedenti=Valutazioni precedenti
+label.vedi_tutte=Vedi tutte
+label.visualizza=Visualizza
 label.visualizza_altri=Visualizza tutte le valutazioni
+label.visualizza_comunicazione=Visualizza Comunicazione
 label.visualizza_evento=Visualizzazione dell''evento {0}
 label.visualizza_evento_modal=Visualizza evento
 label.visualizza_lista_accreditamenti=Visualizza tutti gli accreditamenti
@@ -508,6 +585,7 @@ label.visualizza_lista_eventi=Visualizza tutti gli eventi
 label.visualizza_lista_persone=Visualizza tutte le persone
 label.visualizza_valutazioni=Visualizza Valutazioni
 label.visualizzazione=Visualizzazione
+label.visualizzazione_comunicazione=Visualizzazione Comunicazione
 label.visualizzazione_piano_formativo=Visualizzazione del piano formativo
 label.visualizzazione_seduta=Visualizzazione dati della Seduta {0}
 message.accesso_negato=ACCESSO NEGATO
@@ -518,6 +596,7 @@ message.compilare_tab1=Si prega di compilare la sezione dei Dati dell'Organizzat
 message.compilare_tab2=Si prega di compilare la sezione dei Dati dei Responsabili prima di procedere all'inserimento degli Allegati.
 message.completato=Operazione effettuata!
 message.componente_comitato_eliminato=Componente del Comitato Scientifico eliminato
+message.comunicazione_inviata=Comunicazione inviata con successo.
 message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRiceverete a breve la mail che vi fornirà le informazioni e le credenziali per effettuare l’accesso al sistema.\nVi invitiamo a predisporre la documentazione necessaria da allegare alla richiesta di accreditamento.
 message.dati_attivita_inseriti=I dati relativi all'attività sono stati inseriti con successo.
 message.domanda_aggiunta=Domanda di Accreditamento inserita nella Seduta con successo.
@@ -529,6 +608,7 @@ message.errore_eccezione=Errore lato server.(EXCEPTION)
 message.errore_eliminazione_valutazioni_presenti=Non è possibile eliminare la Seduta fintanto che vi saranno Domande inserite nell'Ordine del Giorno.
 message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
+message.evento_salvato=I dati dell''evento sono stati salvati successo.
 message.gruppoCrecm_riassegnato=Domanda riassegnata ai Referee con successo!
 message.impossibile_inserire_seduta_nel_passato=Impossibile inserire una Seduta in una data precedente a quella di oggi.
 message.info_login=Le credenziali di accesso sono utili per accedere al sistema e procedere all’invio della domanda di accreditamento provvisorio come Provider regionale ECM.\nPer la registrazione sarà necessario compilare tutti i campi ricordando che quelli contrassegnati da un asterisco sono obbligatori.\nSi ricorda che all’indirizzo email inserito, sarà inviata la password per il primo accesso e ogni comunicazione successiva relativa all’accesso e all’utenza del provider in generale.
@@ -541,9 +621,9 @@ message.piano_formativo_anno_gia_inserito=Piano formativo per l''anno {0} già i
 message.presa_in_carico=La Domanda di Accreditamento è stata correttamente presa in carico.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
+message.risposta_inviata=Risposta inviata con successo.
 message.sede_eliminata=Sede eliminata.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
-message.evento_salvato=I dati dell''evento sono stati salvati successo.
 message.seduta_eliminata=Seduta eliminata.
 message.seduta_salvata=La Seduta è stata salvata con successo.
 message.seduta_valutata=Seduta conclusa correttamente con la valutazione di tutte le Domande inserite nell'Ordine del Giorno.
@@ -566,21 +646,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.listaDomandeDaPrendereInCaricaProvvisorio=Lista delle Domande di Accreditamento Provvisorie da prendere in carica
-label.listaDomandeDaPrendereInCaricaStandard=Lista delle Domande di Accreditamento Standard da prendere in carica
-label.listaDomandeDaPrendereInCarica=Lista delle Domande di Accreditamento da prendere in carica
-label.listaDomandeDaValutareProvvisorio=Lista delle Domande di Accreditamento Provvisorie da valutare
-label.listaDomandeDaValutareStandard=Lista delle Domande di Accreditamento Standard da valutare
-label.listaDomandeDaValutare=Lista delle Domande di Accreditamento da valutare
-label.listaDomandeRichiestaIntegrazioneProvvisorio=Lista delle Domande di Accreditamento Provvisorie in richiesta di integrazione
-label.listaDomandeRichiestaIntegrazioneStandard=Lista delle Domande di Accreditamento Standard in richiesta di integrazione
-label.listaDomandeRichiestaIntegrazione=Lista delle Domande di Accreditamento in richiesta di integrazione
-label.listaDomandePreavvisoRigettoProvvisorio=Lista delle Domande di Accreditamento Provvisorie in preavviso di rigetto
-label.listaDomandePreavvisoRigettoStandard=Lista delle Domande di Accreditamento Standard in preavviso di rigetto
-label.listaDomandePreavvisoRigetto=Lista delle Domande di Accreditamento in preavviso di rigetto
-label.listaDomandeDaRiassegnareProvvisorio=Lista delle Domande di Accreditamento Provvisorie da riassegnare
-label.listaDomandeDaRiassegnareStandard=Lista delle Domande di Accreditamento Standard da riassegnare
-label.listaDomandeDaRiassegnare=Lista delle Domande di Accreditamento da riassegnare
-label.listaDomandeInScadenza=Lista delle Domande di Accreditamento in scadenza (nei prossimi 10 giorni)
-label.inserite_nella_prossima_seduta=Nella prossima Seduta del {0} alle {1}
-label.commissione=Commissione ECM
