Ultime modifiche richieste WIP

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -260,12 +260,13 @@ label.ha_partita_IVA=Sei titolare di Partita IVA?
 label.hai_gia_account=Hai già un account?
 label.help=Help
 label.home=Torna alla Home
-label.home_page=Benvenuto in ECM - Regione Veneto
+label.home_page_user_welcome=Benvenuto {0} {1}
+label.home_page_provider_welcome=Benvenuto {0}
 label.id=Id
 label.in_attesa_attivazione=In attesa di attivazione
 label.in_preavviso_di_rigetto=In Preavviso di Rigetto
 label.in_richiesta_integrazione=In Richiesta di Integrazione
-label.in_scadenza=In scadenza nei prossimi 10 giorni
+label.in_scadenza=In scadenza nei prossimi 30 giorni
 label.incarico_presso_la_struttura=Incarico presso la struttura
 label.indietro=Indietro
 label.indirizzo=Indirizzo
@@ -437,8 +438,8 @@ label.prendi_in_carica=Prendi in Carica
 label.presa_visione=Presa visione
 label.prezzo=Prezzo
 label.privata=Privata
-label.procedura_formativa=Procedura formativa
-label.procedure_formative=Procedure formative
+label.procedura_formativa=Tipologia evento
+label.procedure_formative=Tipologie evento
 label.procedure_formative_tipologia=Tipologia dell'offerta formativa
 label.professione=Professione
 label.professioniAccreditamento=Accreditamento per professioni
@@ -646,3 +647,12 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.dati_del_legale=Dati del Legale
+label.rappresentante=Rappresentante
+error.same_password=Si prega di inserire una nuova password
+label.completa=Completa
+label.tutte_le_professioni=Tutte le Professioni/Discipline
+label.dati_di_accreditamento=Dati di accreditamento
+label.info_blocco_legali=Accedendo alla sezione Dati dei Responsabili, i dati del Legale Rappresentante e del Delegato del Legale Rappresentante non saranno più modificabili in quanto utilizzati per il controllo della firma digitale apposta sui file allegati. Qualora il Provider abbia previsto la figura del Delegato del Legale Rappresentante il controllo sulla firma digitale dei file sarà effettuato sui dati del Delegato del Legale Rappresentante
+label.info_inserimento_piano_formativo=Affinché l’inserimento del Piano Formativo sia abilitato è necessario aver inserito tutti i dati richiesti per l’accreditamento provvisorio. L’inserimento del Piano Formativo è obbligatorio ai fini della validazione della domanda di accreditamento
+label.tipoOrganizzatore_nome=Tipologia
