RICHIESTA_INTEGRAZIONE + INTEGRAZIONE + VALUTAZIONE_SEGRETERIA

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -270,6 +270,7 @@ label.inserito_da=Denominazione legale Provider
 label.inserito_piano_formativo=Evento del Piano Formativo relativo all''anno {0}
 label.invia=Invia
 label.invia_domanda=Invia Domanda
+label.invia_integrazione=Invia Integrazione
 label.invia_richiesta_integrazione=Invia Richiesta Integrazione
 label.is_coordinatore=Inserisci come Coordinatore del Comitato Scientifico
 label.is_sede_legale=Inserisci come Sede Legale
@@ -280,6 +281,22 @@ label.iter_accreditamento=Iter Accreditamento
 label.legale_radio=Il richiedente è il Legale Rappresentante
 label.legale_rappresentante=Legale Rappresentante
 label.list_eventi=Lista degli eventi del provider {0}
+label.listaDomandeDaPrendereInCarica=Lista delle Domande di Accreditamento da prendere in carica
+label.listaDomandeDaPrendereInCaricaProvvisorio=Lista delle Domande di Accreditamento Provvisorie da prendere in carica
+label.listaDomandeDaPrendereInCaricaStandard=Lista delle Domande di Accreditamento Standard da prendere in carica
+label.listaDomandeDaRiassegnare=Lista delle Domande di Accreditamento da riassegnare
+label.listaDomandeDaRiassegnareProvvisorio=Lista delle Domande di Accreditamento Provvisorie da riassegnare
+label.listaDomandeDaRiassegnareStandard=Lista delle Domande di Accreditamento Standard da riassegnare
+label.listaDomandeDaValutare=Lista delle Domande di Accreditamento da valutare
+label.listaDomandeDaValutareProvvisorio=Lista delle Domande di Accreditamento Provvisorie da valutare
+label.listaDomandeDaValutareStandard=Lista delle Domande di Accreditamento Standard da valutare
+label.listaDomandeInScadenza=Lista delle Domande di Accreditamento in scadenza (nei prossimi 10 giorni)
+label.listaDomandePreavvisoRigetto=Lista delle Domande di Accreditamento in preavviso di rigetto
+label.listaDomandePreavvisoRigettoProvvisorio=Lista delle Domande di Accreditamento Provvisorie in preavviso di rigetto
+label.listaDomandePreavvisoRigettoStandard=Lista delle Domande di Accreditamento Standard in preavviso di rigetto
+label.listaDomandeRichiestaIntegrazione=Lista delle Domande di Accreditamento in richiesta di integrazione
+label.listaDomandeRichiestaIntegrazioneProvvisorio=Lista delle Domande di Accreditamento Provvisorie in richiesta di integrazione
+label.listaDomandeRichiestaIntegrazioneStandard=Lista delle Domande di Accreditamento Standard in richiesta di integrazione
 label.lista_allegati=Lista degli allegati del provider {0}
 label.lista_anni_selezionabili=Lista degli anni selezionabili
 label.lista_domande_da_valutare=Domande da valutare
@@ -303,6 +320,7 @@ label.modifica_evento=Modifica evento
 label.modifica_profilo=Modifica Profilo
 label.modifica_sede_legale=Modifica Sede Legale
 label.modifica_sede_operativa=Modifica Sede Operativa
+label.modifica_sedi=Inserimento/rimozione di sedi
 label.modifica_seduta=Modifica della Seduta del {0}
 label.modifica_utente=Modifica Utente
 label.mostra=Mostra
@@ -529,6 +547,7 @@ message.errore_eccezione=Errore lato server.(EXCEPTION)
 message.errore_eliminazione_valutazioni_presenti=Non è possibile eliminare la Seduta fintanto che vi saranno Domande inserite nell'Ordine del Giorno.
 message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
+message.evento_salvato=I dati dell''evento sono stati salvati successo.
 message.gruppoCrecm_riassegnato=Domanda riassegnata ai Referee con successo!
 message.impossibile_inserire_seduta_nel_passato=Impossibile inserire una Seduta in una data precedente a quella di oggi.
 message.info_login=Le credenziali di accesso sono utili per accedere al sistema e procedere all’invio della domanda di accreditamento provvisorio come Provider regionale ECM.\nPer la registrazione sarà necessario compilare tutti i campi ricordando che quelli contrassegnati da un asterisco sono obbligatori.\nSi ricorda che all’indirizzo email inserito, sarà inviata la password per il primo accesso e ogni comunicazione successiva relativa all’accesso e all’utenza del provider in generale.
@@ -543,10 +562,10 @@ message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_eliminata=Sede eliminata.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
-message.evento_salvato=I dati dell''evento sono stati salvati successo.
 message.seduta_eliminata=Seduta eliminata.
 message.seduta_salvata=La Seduta è stata salvata con successo.
 message.seduta_valutata=Seduta conclusa correttamente con la valutazione di tutte le Domande inserite nell'Ordine del Giorno.
+message.sono_evidenziati_gli_elementi_aggiunti_e_rimossi_in_attesa_di_approvazione=Sono evidenziati gli elementi aggiunti e rimossi che saranno effettivi solo dopo approvazione da parte della Segreteria ECM.
 message.utente_creato=Il nuovo utente è stato correttamente registrato ed è stata inviata una e-mail con le credenziali di accesso.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.valutazione_commissione_salvata=Valutazione della Commissione e Stato della Domanda di Accreditamento salvati
@@ -566,19 +585,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.listaDomandeDaPrendereInCaricaProvvisorio=Lista delle Domande di Accreditamento Provvisorie da prendere in carica
-label.listaDomandeDaPrendereInCaricaStandard=Lista delle Domande di Accreditamento Standard da prendere in carica
-label.listaDomandeDaPrendereInCarica=Lista delle Domande di Accreditamento da prendere in carica
-label.listaDomandeDaValutareProvvisorio=Lista delle Domande di Accreditamento Provvisorie da valutare
-label.listaDomandeDaValutareStandard=Lista delle Domande di Accreditamento Standard da valutare
-label.listaDomandeDaValutare=Lista delle Domande di Accreditamento da valutare
-label.listaDomandeRichiestaIntegrazioneProvvisorio=Lista delle Domande di Accreditamento Provvisorie in richiesta di integrazione
-label.listaDomandeRichiestaIntegrazioneStandard=Lista delle Domande di Accreditamento Standard in richiesta di integrazione
-label.listaDomandeRichiestaIntegrazione=Lista delle Domande di Accreditamento in richiesta di integrazione
-label.listaDomandePreavvisoRigettoProvvisorio=Lista delle Domande di Accreditamento Provvisorie in preavviso di rigetto
-label.listaDomandePreavvisoRigettoStandard=Lista delle Domande di Accreditamento Standard in preavviso di rigetto
-label.listaDomandePreavvisoRigetto=Lista delle Domande di Accreditamento in preavviso di rigetto
-label.listaDomandeDaRiassegnareProvvisorio=Lista delle Domande di Accreditamento Provvisorie da riassegnare
-label.listaDomandeDaRiassegnareStandard=Lista delle Domande di Accreditamento Standard da riassegnare
-label.listaDomandeDaRiassegnare=Lista delle Domande di Accreditamento da riassegnare
-label.listaDomandeInScadenza=Lista delle Domande di Accreditamento in scadenza (nei prossimi 10 giorni)
