ultime modifiche richieste (WIP)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -659,3 +659,5 @@ label.dati_di_accreditamento=Dati di accreditamento
 label.info_blocco_legali=Accedendo alla sezione Dati dei Responsabili, i dati del Legale Rappresentante e del Delegato del Legale Rappresentante non saranno più modificabili in quanto utilizzati per il controllo della firma digitale apposta sui file allegati. Qualora il Provider abbia previsto la figura del Delegato del Legale Rappresentante il controllo sulla firma digitale dei file sarà effettuato sui dati del Delegato del Legale Rappresentante
 label.info_inserimento_piano_formativo=Affinché l’inserimento del Piano Formativo sia abilitato è necessario aver inserito tutti i dati richiesti per l’accreditamento provvisorio. L’inserimento del Piano Formativo è obbligatorio ai fini della validazione della domanda di accreditamento
 label.tipoOrganizzatore_nome=Tipologia
+label.presa_in_carico_da=Presa in carica da
+label.invia_email_commissione_seduta=Invia email di notifica alla Commissione ECM
