Demo 22/09/2016 - 1 giro fino a VALUTAZIONE_SEGRETERIA OK

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -51,6 +51,7 @@ error.password.incorrect=password non esatta
 error.password_repeat=la password non coincide
 error.professioni_non_conformi_con_accreditamento=Le professioni dei Componenti del Comitato Scientifico non sono conformi con le professioni dell''Accreditamento
 error.repeat=non corrisponde
+error.same_password=Si prega di inserire una nuova password
 error.sede_legale_gia_inserita=La Sede Legale deve essere unica ed è già stata inserita per questo Provider
 error.select=selezionare almeno un valore
 error.selezionare_tipologia_sede=Selezionare almeno una tipologia di Sede
@@ -140,6 +141,7 @@ label.cognome=Cognome
 label.coincide_con_sede_legale=Coincide con Sede Legale
 label.comitato_scientifico=Comitato Scientifico
 label.commissione=Commissione ECM
+label.completa=Completa
 label.componente_comitato=Componente
 label.componenti_comitato_scientifico=Componenti del Comitato Scientifico
 label.componi=Componi
@@ -183,10 +185,12 @@ label.dati_accreditamento=Dati Accreditamento
 label.dati_attività=Dati dell'attività
 label.dati_dei_responsabili=Dati dei Responsabili
 label.dati_del=Dati del
+label.dati_del_legale=Dati del Legale
 label.dati_del_legale_rappresentante=Legale rappresentante
 label.dati_del_organizzatore=Dati dell'Organizzatore
 label.dati_del_provider=Dati del provider
 label.dati_del_richiedente=Richiedente
+label.dati_di_accreditamento=Dati di accreditamento
 label.dati_economici=Dati economici
 label.dati_economici_info=Dati non obbligatori. Se vengono compilati i dati diventa obbligatoria la presentazione dei documenti allegati.
 label.dati_legale_login=Dati del\nLegale Rappresentante
@@ -260,8 +264,8 @@ label.ha_partita_IVA=Sei titolare di Partita IVA?
 label.hai_gia_account=Hai già un account?
 label.help=Help
 label.home=Torna alla Home
-label.home_page_user_welcome=Benvenuto {0} {1}
 label.home_page_provider_welcome=Benvenuto {0}
+label.home_page_user_welcome=Benvenuto {0} {1}
 label.id=Id
 label.in_attesa_attivazione=In attesa di attivazione
 label.in_preavviso_di_rigetto=In Preavviso di Rigetto
@@ -273,7 +277,9 @@ label.indirizzo=Indirizzo
 label.indirizzo_sede={0} ({1})
 label.info_account=Accedi all'area riservata
 label.info_applicazione_integrazione=Le modifche saranno applicate solo dopo approvazione da parte della Segreteria ECM
+label.info_blocco_legali=Accedendo alla sezione Dati dei Responsabili, i dati del Legale Rappresentante e del Delegato del Legale Rappresentante non saranno più modificabili in quanto utilizzati per il controllo della firma digitale apposta sui file allegati. Qualora il Provider abbia previsto la figura del Delegato del Legale Rappresentante il controllo sulla firma digitale dei file sarà effettuato sui dati del Delegato del Legale Rappresentante
 label.info_delega=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
+label.info_inserimento_piano_formativo=Affinché l’inserimento del Piano Formativo sia abilitato è necessario aver inserito tutti i dati richiesti per l’accreditamento provvisorio. L’inserimento del Piano Formativo è obbligatorio ai fini della validazione della domanda di accreditamento
 label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta di accreditamento provider provvisorio possono richiedere le credenziali compilando il modulo di registrazione.
 label.info_provider=Informazioni del Provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
@@ -297,6 +303,7 @@ label.inserito_da=Denominazione legale Provider
 label.inserito_piano_formativo=Evento del Piano Formativo relativo all''anno {0}
 label.invia=Invia
 label.invia_domanda=Invia Domanda
+label.invia_email_commissione_seduta=Invia email di notifica alla Commissione ECM
 label.invia_integrazione=Invia Integrazione
 label.invia_richiesta_integrazione=Invia Richiesta Integrazione
 label.inviata=Inviata
@@ -437,6 +444,7 @@ label.piva=PIVA
 label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
 label.preavvisoRigetto=in preavviso di rigetto
 label.prendi_in_carica=Prendi in Carica
+label.presa_in_carico_da=Presa in carica da
 label.presa_visione=Presa visione
 label.prezzo=Prezzo
 label.privata=Privata
@@ -455,6 +463,7 @@ label.provider_lista=Lista dei provider
 label.provincia=Provincia
 label.pubblica=Pubblica
 label.ragione_sociale=Ragione sociale
+label.rappresentante=Rappresentante
 label.rappresentante_radio=Chi sta effettuando la presente richiesta?
 label.recupera_password=Recupera password
 label.referee=Referee
@@ -478,6 +487,7 @@ label.ricevute_comunicazione_messaggio={0} Comunicazioni ricevute
 label.richiestaIntegrazione=in richiesta di integrazione
 label.richiesta_accreditamento=Richiesta di accreditamento
 label.richiesta_integrazione=Richiesta di Integrazione
+label.richiesta_preavviso_di_rigetto=Richiesta Preavviso di Rigetto
 label.richiesta_standard_accreditamento=Richiesta di accreditamento Standard
 label.richieste_accreditamento=Richieste di accreditamento
 label.richieste_standard_accreditamento=Richieste di accreditamento Standard
@@ -536,6 +546,7 @@ label.sì=Sì
 label.tel_secondario=Telefono secondario
 label.telefono=Telefono
 label.tempo_indeterminato=Tempo indeterminato
+label.tipoOrganizzatore_nome=Tipologia
 label.tipo_organizzatore=Tipo Organizzatore
 label.tipo_provider=Tipo:
 label.tipologia=Tipologia:
@@ -552,6 +563,7 @@ label.to_segreteria=A: Segreteria ECM
 label.torna_in_visualizzazione=Torna in visualizzazione
 label.trova=Trova
 label.tutte="Tutte"
+label.tutte_le_professioni=Tutte le Professioni/Discipline
 label.tutte_le_valutazioni=Mostra tutte le Valutazioni
 label.ultima_comunicazione_ricevuta=Ultima Comunicazione ricevuta: {0}
 label.ultimi_messaggi_ricevuti=Ultimi messaggi ricevuti ({0} di {1})
@@ -650,14 +662,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.dati_del_legale=Dati del Legale
-label.rappresentante=Rappresentante
-error.same_password=Si prega di inserire una nuova password
-label.completa=Completa
-label.tutte_le_professioni=Tutte le Professioni/Discipline
-label.dati_di_accreditamento=Dati di accreditamento
-label.info_blocco_legali=Accedendo alla sezione Dati dei Responsabili, i dati del Legale Rappresentante e del Delegato del Legale Rappresentante non saranno più modificabili in quanto utilizzati per il controllo della firma digitale apposta sui file allegati. Qualora il Provider abbia previsto la figura del Delegato del Legale Rappresentante il controllo sulla firma digitale dei file sarà effettuato sui dati del Delegato del Legale Rappresentante
-label.info_inserimento_piano_formativo=Affinché l’inserimento del Piano Formativo sia abilitato è necessario aver inserito tutti i dati richiesti per l’accreditamento provvisorio. L’inserimento del Piano Formativo è obbligatorio ai fini della validazione della domanda di accreditamento
-label.tipoOrganizzatore_nome=Tipologia
-label.presa_in_carico_da=Presa in carica da
-label.invia_email_commissione_seduta=Invia email di notifica alla Commissione ECM
