ultime modifiche pre-release 22/09/2016

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -260,8 +260,7 @@ label.ha_partita_IVA=Sei titolare di Partita IVA?
 label.hai_gia_account=Hai già un account?
 label.help=Help
 label.home=Torna alla Home
-label.home_page_user_welcome=Benvenuto {0} {1}
-label.home_page_provider_welcome=Benvenuto {0}
+label.homepage=Homepage ECM - Regione Veneto
 label.id=Id
 label.in_attesa_attivazione=In attesa di attivazione
 label.in_preavviso_di_rigetto=In Preavviso di Rigetto
