modale giorni integrazione e controllo pulsante menù seduta

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -282,6 +282,7 @@ label.info_inserimento_piano_formativo=Affinché l’inserimento del Piano Forma
 label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta di accreditamento provider provvisorio possono richiedere le credenziali compilando il modulo di registrazione.
 label.info_provider=Informazioni del Provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
+label.inserimento_giorni_integrazione=Selezionare numero di giorni massimi in cui il Provider deve completare l'integrazione
 label.inserimento_nuovo_piano_formativo=Inserimento del piano formativo
 label.inserimento_piano_formativo=Piano formativo relativo all''anno {0}
 label.inserimento_sede=Inserimento Sede
