Modali conferma integrazione, preavviso rigetto + conferma registraz WIP

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -662,3 +662,5 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.benvenuto_provider=Benvenuto {0}!
+label.torna_login=Torna alla pagina di login
