--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -88,6 +88,8 @@ label.aggiungi_evento=Aggiungi evento
 label.aggiungi_sede=Aggiungi sede
 label.allega=Allega
 label.allegati=Allegati
+label.allegati_note_osservazioni=Allegati Note e Osservazioni
+label.allegati_note_osservazioni_integrazione_preavviso_rigetto=Note e Osservazioni sull'Integrazione e/o sul Preavviso di Rigetto
 label.allegato=Allegato
 label.allegato_non_inserito=Allegato non inserito
 label.altro_personale=Altro personale
@@ -113,6 +115,7 @@ label.atto_delega=Atto di delega
 label.avanti=avanti
 label.azioni=Azioni
 label.benvenuto=Benvenuto
+label.benvenuto_provider=Benvenuto {0}!
 label.blocca_seduta=Blocca Seduta
 label.bloccata=Bloccata
 label.bloccate=Bloccate
@@ -282,6 +285,7 @@ label.info_inserimento_piano_formativo=Affinché l’inserimento del Piano Forma
 label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta di accreditamento provider provvisorio possono richiedere le credenziali compilando il modulo di registrazione.
 label.info_provider=Informazioni del Provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
+label.inserimento_file_note=Inserimento Allegato (opzionale)
 label.inserimento_giorni_integrazione=Selezionare numero di giorni massimi in cui il Provider deve completare l'integrazione
 label.inserimento_nuovo_piano_formativo=Inserimento del piano formativo
 label.inserimento_piano_formativo=Piano formativo relativo all''anno {0}
@@ -406,6 +410,10 @@ label.non_valido=non valido
 label.non_valutato=non valutato
 label.not_enabled=Disabilitato
 label.note=Note
+label.noteOsservazioniIntegrazione=Note e Osservazioni Integrazione
+label.noteOsservazioniPreavvisoRigetto=Note e Osservazioni Preavviso di Rigetto
+label.note_osservazioni_integrazione=Note e Osservazioni sull'Integrazione
+label.note_osservazioni_preavviso_rigetto=Note e Osservazioni sul Preavviso di Rigetto
 label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
 label.nuova=Nuova
@@ -562,6 +570,7 @@ label.to_provider={0} ({1})
 label.to_provider_multipli=A: destinatari multipli
 label.to_segreteria=A: Segreteria ECM
 label.torna_in_visualizzazione=Torna in visualizzazione
+label.torna_login=Torna alla pagina di login
 label.trova=Trova
 label.tutte="Tutte"
 label.tutte_le_professioni=Tutte le Professioni/Discipline
@@ -664,5 +673,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.benvenuto_provider=Benvenuto {0}!
-label.torna_login=Torna alla pagina di login
